# Q-LEAF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml
benchmarks/: nsg_baseline_full_graph.cpp  nsg_baseline_subgraph_benchmark.cpp
config/: deep10m.yaml  sift10m.yaml  text2image10m.yaml  yfcc10m.yaml
include/: aligned_allocator.h  nsg_qepo_data_loader.h  nsg_qepo_utils.h  nsg_qleaf_data_loader.h  nsg_qleaf_utils.h
scripts/: build_and_generate_eps.py  build_multi_dataset_subgraphs.py  build_subgraphs_for_selectivity_experiment.py  generate_segmented_labels.py  generate_segmented_labels_all.py  generate_uniform_labels.py  run_nsg_qepo_single_ep_benchmark.py  run_qLeaf_benchmark.py
src/: build_nsg_subgraphs.cpp  compute_ep_nsg.cpp  nsg_qepo_data_loader.cpp  nsg_qepo_single_ep.cpp  nsg_qepo_utils.cpp  nsg_qleaf_data_loader.cpp  nsg_qleaf_single_ep.cpp  nsg_qleaf_utils.cpp
